[package]
name = "get_wikipedia_info"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
regex = "1.11.1"
reqwest = { version = "0.12.22", features = ["blocking"] }
scraper = { version = "0.23.1", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
